package eapli.base.equipa.repositories;

import eapli.base.equipa.domain.CodigoUnicoEquipa;
import eapli.base.equipa.domain.Equipa;
import eapli.framework.domain.repositories.DomainRepository;

/**
 * The interface Equipa repository.
 */
public interface EquipaRepository
        extends DomainRepository<CodigoUnicoEquipa, Equipa> {
}
